fixed mobile nav bug with nested lists not showing, edited alert_box design, added alert boxes

--- a/app/assets/stylesheets/modules/_nav_dropdown_mobile.scss
+++ b/app/assets/stylesheets/modules/_nav_dropdown_mobile.scss
@@ -5,7 +5,5 @@ nav .top-bar-section li:not(.has-form) a:not(.button) {
     }
     nav .top-bar-section {
         width: 100%;
-        height: 250px;
-        overflow-y: scroll;
     }    
 }
